name:                kademlia
version:             0.1.0.0
synopsis:            Kademlia Distributed Hash Table
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE
  bench/readme.md
  bench/UDPBench.hs
  bench/UDPBenchServer.hs

executable kademlia
  default-language:    Haskell2010
  main-is:             main.hs
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -A500M -G3 -qg1"
  build-depends:       base >=4.6
                     , aeson >=0.6
                     , binary >=0.6
                     , bytestring >=0.10
                     , conduit >=1.0
                     , conduit-extra >=1.1.0.3
                     , data-binary-ieee754 >=0.4
                     , directory >=1.2
                     , filepath >=1.3
                     , hashtables >=1.1
                     , monadLib >=3.7
                     , mtl >=2.1
                     , network >=2.4
                     , network-conduit >=1.0
                     , stm >=2.4
                     , suspend >=0.2
                     , text >= 1.0
                     , time >=1.4
                     , timers >=0.2
                     , unix >=2.6
                     , vector >=0.10

library
  default-language:    Haskell2010
  exposed-modules:     Network.DHT.Kademlia
                     , Network.DHT.Kademlia.Bucket
                     , Network.DHT.Kademlia.Def
                     , Network.DHT.Kademlia.Util
  other-modules:       Util.File
                     , Util.Integral
                     , Util.Misc
                     , Util.Time
                     , Util.Words
  build-depends:       base >=4.6
                     , aeson >=0.6
                     , binary >=0.6
                     , bytestring >=0.10
                     , conduit >=1.0
                     , conduit-extra >=1.1.0.3
                     , data-binary-ieee754 >=0.4
                     , directory >=1.2
                     , filepath >=1.3
                     , hashtables >=1.1
                     , monadLib >=3.7
                     , mtl >=2.1
                     , network >=2.4
                     , network-conduit >=1.0
                     , stm >=2.4
                     , suspend >=0.2
                     , text >= 1.0
                     , time >=1.4
                     , timers >=0.2
                     , unix >=2.6
                     , vector >=0.10

test-suite all
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    cpp-options:       -DTEST
    hs-source-dirs:    test, .
    main-is:           main.hs
    build-depends:     hspec
                     , base
                     , aeson >=0.6
                     , binary >=0.6
                     , bytestring >=0.10
                     , conduit >=1.0
                     , conduit-extra >=1.1.0.3
                     , data-binary-ieee754 >=0.4
                     , directory >=1.2
                     , filepath >=1.3
                     , hashtables >=1.1
                     , monadLib >=3.7
                     , mtl >=2.1
                     , network >=2.4
                     , network-conduit >=1.0
                     , stm >=2.4
                     , suspend >=0.2
                     , text >= 1.0
                     , time >=1.4
                     , timers >=0.2
                     , unix >=2.6
                     , vector >=0.10
