name:                kademlia
version:             0.1.0.0
synopsis:            Kademlia Distributed Hash Table
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  LICENSE

executable kademlia
  default-language:    Haskell2010
  main-is:             main.hs
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -G3 -qg1"
  build-depends:       base >=4.6
                     , aeson ==0.*
                     , binary ==0.*
                     , bytestring ==0.*
                     , conduit ==1.*
                     , conduit-extra ==1.*
                     , data-binary-ieee754 ==0.*
                     , directory ==1.*
                     , fast-logger ==2.*
                     , filepath ==1.*
                     , hashtables ==1.*
                     , monadLib ==3.*
                     , mtl ==2.*
                     , network ==2.*
                     , stm ==2.*
                     , suspend ==0.*
                     , text ==1.*
                     , time ==1.*
                     , timers ==0.*
                     , unix ==2.*
                     , vector ==0.*

library
  default-language:    Haskell2010
  exposed-modules:     Network.DHT.Kademlia
                     , Network.DHT.Kademlia.Bucket
                     , Network.DHT.Kademlia.Def
                     , Network.DHT.Kademlia.Util
  other-modules:       Util.File
                     , Util.Integral
                     , Util.Misc
                     , Util.Time
                     , Util.Words
  build-depends:       base >=4.6
                     , aeson ==0.*
                     , binary ==0.*
                     , bytestring ==0.*
                     , conduit ==1.*
                     , conduit-extra ==1.*
                     , data-binary-ieee754 ==0.*
                     , directory ==1.*
                     , fast-logger ==2.*
                     , filepath ==1.*
                     , hashtables ==1.*
                     , monadLib ==3.*
                     , mtl ==2.*
                     , network ==2.*
                     , stm ==2.*
                     , suspend ==0.*
                     , text ==1.*
                     , time ==1.*
                     , timers ==0.*
                     , unix ==2.*
                     , vector ==0.*

test-suite all
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    cpp-options:       -DTEST
    hs-source-dirs:    test, .
    main-is:           main.hs
    build-depends:     hspec ==2.*
                     , base >=4.6
                     , aeson ==0.*
                     , binary ==0.*
                     , bytestring ==0.*
                     , conduit ==1.*
                     , conduit-extra ==1.*
                     , data-binary-ieee754 ==0.*
                     , directory ==1.*
                     , fast-logger ==2.*
                     , filepath ==1.*
                     , hashtables ==1.*
                     , monadLib ==3.*
                     , mtl ==2.*
                     , network ==2.*
                     , stm ==2.*
                     , suspend ==0.*
                     , text ==1.*
                     , time ==1.*
                     , timers ==0.*
                     , unix ==2.*
                     , vector ==0.*
