name:                kademlia
version:             0.1.0.0
synopsis:            Kademlia Distributed Hash Table
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.18
extra-source-files:
  LICENSE

executable kademlia
  default-language:    Haskell2010
  main-is:             main.hs
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -G3 -qg1"
  build-depends:       base ==4.*
                     , aeson
                     , binary
                     , bytestring
                     , conduit
                     , conduit-extra
                     , data-binary-ieee754
                     , directory
                     , fast-logger
                     , filepath
                     , hashtables
                     , mtl
                     , network
                     , stm
                     , stm-containers
                     , text
                     , time
                     , timers ==0.*
                     , unix
                     , vector

library
  default-language:    Haskell2010
  exposed-modules:     Network.DHT.Kademlia
                     , Network.DHT.Kademlia.Bucket
                     , Network.DHT.Kademlia.Def
                     , Network.DHT.Kademlia.Util
  other-modules:       Util.File
                     , Util.Integral
                     , Util.Misc
                     , Util.Time
                     , Util.Words
  build-depends:       base ==4.*
                     , aeson
                     , binary
                     , bytestring
                     , conduit
                     , conduit-extra
                     , data-binary-ieee754
                     , directory
                     , fast-logger
                     , filepath
                     , hashtables
                     , mtl
                     , network
                     , stm
                     , stm-containers
                     , text
                     , time
                     , timers ==0.*
                     , unix
                     , vector

test-suite all
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    cpp-options:       -DTEST
    hs-source-dirs:    test, .
    main-is:           main.hs
    build-depends:     hspec
                     , base ==4.*
                     , aeson
                     , binary
                     , bytestring
                     , conduit
                     , conduit-extra
                     , data-binary-ieee754
                     , directory
                     , fast-logger
                     , filepath
                     , hashtables
                     , mtl
                     , network
                     , stm
                     , stm-containers
                     , text
                     , time
                     , timers ==0.*
                     , unix
                     , vector
