name:                Kademlia-UDP-bench
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

executable UDPClient
  main-is:             UDPClient.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings
  ghc-options:         -fforce-recomp -O2 -threaded -rtsopts "-with-rtsopts=-N1 -A20M"
  build-depends:       base >=4.7 && <4.8
                     , bytestring >=0.10 && <0.11
                     , criterion >=1.0 && <1.1
                     , network >=2.6 && <2.7
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable UDPServer
  main-is:             UDPServer.hs
  -- other-modules:
  other-extensions:    OverloadedStrings
  ghc-options:         -fforce-recomp -O2 -threaded -rtsopts "-with-rtsopts=-N1 -A20M"
  build-depends:       base >=4.7 && <4.8
                     , bytestring >=0.10 && <0.11
                     , network >=2.6 && <2.7
  -- hs-source-dirs:
  default-language:    Haskell2010

